--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,18 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=-5,591
+Pos=50,700
 Size=724,131
-Collapsed=0
+Collapsed=1
 
 [Window][Objects]
-Pos=-2,132
-Size=177,459
+Pos=1102,1
+Size=177,722
 Collapsed=0
 
 [Window][デバッグ]
-Pos=834,37
-Size=439,659
+Pos=229,174
+Size=1073,203
 Collapsed=0
 
 [Window][SRVManager]
@@ -248,6 +248,22 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x5A057040,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xBEEE8D13,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x958E4C6D,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFBF720C7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x166CAF0D,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
