--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -116,7 +116,6 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Common\HRESULT_ASSERT.cpp" />
     <ClCompile Include="Common\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -150,6 +149,7 @@
     <ClCompile Include="Features\Particle\Particle.cpp" />
     <ClCompile Include="Features\Particle\ParticleManager.cpp" />
     <ClCompile Include="Features\Particle\ParticleSystem.cpp" />
+    <ClCompile Include="Features\Primitive\AABB.cpp" />
     <ClCompile Include="Features\RandomGenerator\RandomGenerator.cpp" />
     <ClCompile Include="Features\SceneManager\SceneManager.cpp" />
     <ClCompile Include="Features\Sprite\Sprite.cpp" />
@@ -158,7 +158,6 @@
     <ClCompile Include="Utility\ConvertString\ConvertString.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AABB.h" />
     <ClInclude Include="Common\define.h" />
     <ClInclude Include="Common\HRESULT_ASSERT.h" />
     <ClInclude Include="Common\stdafx.h" />
@@ -194,6 +193,7 @@
     <ClInclude Include="Features\Particle\Particle.h" />
     <ClInclude Include="Features\Particle\ParticleManager.h" />
     <ClInclude Include="Features\Particle\ParticleSystem.h" />
+    <ClInclude Include="Features\Primitive\AABB.h" />
     <ClInclude Include="Features\RandomGenerator\RandomGenerator.h" />
     <ClInclude Include="Features\SceneManager\SceneManager.h" />
     <ClInclude Include="Features\Sprite\Sprite.h" />
