--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -5,17 +5,17 @@ Collapsed=0
 
 [Window][Log]
 Pos=50,700
-Size=724,131
-Collapsed=1
+Size=564,131
+Collapsed=0
 
 [Window][Objects]
-Pos=1102,1
+Pos=1422,-2
 Size=177,722
 Collapsed=0
 
 [Window][デバッグ]
-Pos=245,194
-Size=611,318
+Pos=74,70
+Size=502,603
 Collapsed=0
 
 [Window][SRVManager]
@@ -264,6 +264,22 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x166CAF0D,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xCED8F95A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x13D5644C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x2D06235A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x0ACEA43A,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
