--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -234,14 +234,8 @@
     <ClCompile Include="Features\Particle\ParticleManager.cpp">
       <Filter>Feature\Particle\Manager</Filter>
     </ClCompile>
-    <ClCompile Include="Features\Particle\Emitter\ParticleEmitter.cpp">
-      <Filter>Feature\Particle\Emitter</Filter>
-    </ClCompile>
     <ClCompile Include="Features\RandomGenerator\RandomGenerator.cpp">
       <Filter>Feature\RandomGenerator</Filter>
-    </ClCompile>
-    <ClCompile Include="Features\Particle\Emitter\BaseParticleEmitter.cpp">
-      <Filter>Feature\Particle\Emitter</Filter>
     </ClCompile>
     <ClCompile Include="Features\Line\Line.cpp">
       <Filter>Feature\Line</Filter>
@@ -251,6 +245,12 @@
     </ClCompile>
     <ClCompile Include="Features\Primitive\AABB.cpp">
       <Filter>Feature\AABB</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Particle\Manager\EmitterManager.cpp">
+      <Filter>Feature\Particle\Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Particle\Emitter\ParticleEmitter.cpp">
+      <Filter>Feature\Particle\Emitter</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -362,12 +362,6 @@
     <ClInclude Include="Features\Particle\ParticleManager.h">
       <Filter>Feature\Particle\Manager</Filter>
     </ClInclude>
-    <ClInclude Include="Features\Particle\Emitter\BaseParticleEmitter.h">
-      <Filter>Feature\Particle\Emitter</Filter>
-    </ClInclude>
-    <ClInclude Include="Features\Particle\Emitter\ParticleEmitter.h">
-      <Filter>Feature\Particle\Emitter</Filter>
-    </ClInclude>
     <ClInclude Include="Interfaces\ISceneFactory.h">
       <Filter>Interface</Filter>
     </ClInclude>
@@ -385,6 +379,12 @@
     </ClInclude>
     <ClInclude Include="Features\Primitive\AABB.h">
       <Filter>Feature\AABB</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Particle\Manager\EmitterManager.h">
+      <Filter>Feature\Particle\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Particle\Emitter\ParticleEmitter.h">
+      <Filter>Feature\Particle\Emitter</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
