エミッターを３つ追加 サンプラー設定をポイントフィルタリング

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,19 +4,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=50,700
+Pos=343,0
 Size=564,131
-Collapsed=0
+Collapsed=1
 
 [Window][Objects]
-Pos=1422,-2
+Pos=1423,0
 Size=177,722
-Collapsed=0
+Collapsed=1
 
 [Window][デバッグ]
-Pos=74,70
+Pos=923,0
 Size=502,603
-Collapsed=0
+Collapsed=1
 
 [Window][SRVManager]
 Pos=515,257
@@ -280,6 +280,42 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x0ACEA43A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xEA0AA494,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE551E850,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x16402B34,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xB0F60FC5,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x01E84BE2,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x52D7DDA9,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x1CAF354B,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA7B154D3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x7799FD41,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
