SRVManagerの改善とパーティクル管理の修正
SRVManager.cppとSRVManager.hでSRVの割り当てと解放処理を改善し、定数定義をヘッダーファイルに移動。JsonLoader.hにJSONファイルの存在確認メソッドを追加。ParticleEmitter.cppとParticleEmitter.hでファイル存在確認とエラーメッセージ表示を追加。EmitterManager.cppでファイル存在確認を追加。Particle.cppとParticleManager.cppでリソース解放処理を追加。Firework2.jsonでパーティクル設定を変更。RequiredScene.cppでパーティクル解放処理を削除。imgui.iniでウィンドウ設定を変更。

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -9,13 +9,13 @@ Size=564,131
 Collapsed=1
 
 [Window][Objects]
-Pos=1423,0
+Pos=-1,179
 Size=177,722
 Collapsed=0
 
 [Window][デバッグ]
-Pos=21,274
-Size=502,603
+Pos=927,289
+Size=539,603
 Collapsed=0
 
 [Window][SRVManager]
@@ -316,6 +316,18 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x7799FD41,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x1A949987,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE133A958,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x8AF42D24,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
