--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -14,8 +14,8 @@ Size=177,722
 Collapsed=0
 
 [Window][デバッグ]
-Pos=927,289
-Size=539,603
+Pos=491,347
+Size=539,430
 Collapsed=0
 
 [Window][SRVManager]
@@ -328,6 +328,22 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x8AF42D24,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x08CE6EDB,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x2C99F4EF,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xFFB59449,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xD47FDD45,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
