--- a/.github/workflows/ReleaseBuildTest.yml
+++ b/.github/workflows/ReleaseBuildTest.yml
@@ -16,6 +16,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          
+      - name: Set up Visual Studio
+        uses: microsoft/setup-msvc@v1
+        with:
+          version: 'latest'
 
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
@@ -24,4 +29,4 @@ jobs:
 
       - name: Build
         run: |
-          msbuild ${{env.SOLUTION_FILE_PATH}} /p:Platform=x64,Configuration=${{env.CONFIGURATION}}
+          msbuild ${{env.SOLUTION_FILE_PATH}} /p:Platform=x64,Configuration=${{env.CONFIGURATION}} /verbosity:diagnostic
