--- a/.github/workflows/ReleaseBuildTest.yml
+++ b/.github/workflows/ReleaseBuildTest.yml
@@ -9,18 +9,13 @@ env:
 
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
-          
-      - name: Set up Visual Studio
-        uses: microsoft/setup-msvc@v1
-        with:
-          version: 'latest'
 
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
