--- a/Engine/Externals/DirectXTex/DirectXTex_Desktop_2022_Win10.vcxproj
+++ b/Engine/Externals/DirectXTex/DirectXTex_Desktop_2022_Win10.vcxproj
@@ -114,6 +114,9 @@
     <Manifest>
       <EnableDPIAwareness>false</EnableDPIAwareness>
     </Manifest>
+    <Lib>
+      <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="Shaders\BC6HEncode.hlsl">
