--- a/Engine/Externals/ImGui/ImGui.vcxproj
+++ b/Engine/Externals/ImGui/ImGui.vcxproj
@@ -107,6 +107,7 @@
       <LanguageStandard>Default</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>
