--- a/Engine/Externals/ImGui/ImGui.vcxproj
+++ b/Engine/Externals/ImGui/ImGui.vcxproj
@@ -107,7 +107,7 @@
       <LanguageStandard>Default</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <Optimization>MinSpace</Optimization>
+      <Optimization>MaxSpeed</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>
