--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,18 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=343,0
-Size=564,131
-Collapsed=1
+Pos=171,775
+Size=714,127
+Collapsed=0
 
 [Window][Objects]
-Pos=-1,179
-Size=177,722
+Pos=4,78
+Size=169,834
 Collapsed=0
 
 [Window][デバッグ]
-Pos=491,347
-Size=539,430
+Pos=1148,24
+Size=432,853
 Collapsed=0
 
 [Window][SRVManager]
@@ -344,6 +344,18 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xD47FDD45,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3D7890F3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x516850E4,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x1FB63574,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
