パーティクルJSONの更新とDebugManagerのUIを変更

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Log]
-Pos=171,775
-Size=714,127
+Pos=171,781
+Size=714,121
 Collapsed=0
 
 [Window][Objects]
@@ -14,7 +14,7 @@ Size=169,834
 Collapsed=0
 
 [Window][デバッグ]
-Pos=1148,24
+Pos=1163,-4
 Size=432,853
 Collapsed=0
 
@@ -356,6 +356,38 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x1FB63574,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x819C510B,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE29EA88C,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xF7A5769F,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x73628425,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x034A8527,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x12546990,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x17ACFC98,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x670A95C5,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
