--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -136,8 +136,23 @@
     <Filter Include="DebugTools\PrimitiveDrawer">
       <UniqueIdentifier>{676fa4eb-91d9-4e1f-af5e-23aa2575b1f6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Feature\AABB">
+    <Filter Include="Feature\Lighting">
+      <UniqueIdentifier>{2128e531-19f2-4691-bd96-69fd85443bf2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Feature\Lighting\Manager">
+      <UniqueIdentifier>{02cc3392-7700-4b10-98af-e1bf1d321ca5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Feature\Lighting\PointLight">
+      <UniqueIdentifier>{2888c7ee-df07-4405-84e7-fb8a68bde7cb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Feature\Shape">
+      <UniqueIdentifier>{37027ad3-d90a-4c1b-87a8-3a49b496e973}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Feature\Shape\AABB">
       <UniqueIdentifier>{f7dbd80f-e81d-4548-9ce0-f4c751fd5c3d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Feature\Shape\OBB">
+      <UniqueIdentifier>{4490bcaf-3130-4655-9eca-14949ee03dde}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -238,13 +253,19 @@
       <Filter>Feature\Line\System</Filter>
     </ClCompile>
     <ClCompile Include="Features\Primitive\AABB.cpp">
-      <Filter>Feature\AABB</Filter>
+      <Filter>Feature\Shape\AABB</Filter>
     </ClCompile>
     <ClCompile Include="Features\Particle\Manager\EmitterManager.cpp">
       <Filter>Feature\Particle\Manager</Filter>
     </ClCompile>
     <ClCompile Include="Features\Particle\Emitter\ParticleEmitter.cpp">
       <Filter>Feature\Particle\Emitter</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Lighting\Manager\LightingManager.cpp">
+      <Filter>Feature\Lighting\Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Primitive\OBB.cpp">
+      <Filter>Feature\Shape\OBB</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -369,13 +390,22 @@
       <Filter>Feature\Line\Manager</Filter>
     </ClInclude>
     <ClInclude Include="Features\Primitive\AABB.h">
-      <Filter>Feature\AABB</Filter>
+      <Filter>Feature\Shape\AABB</Filter>
     </ClInclude>
     <ClInclude Include="Features\Particle\Manager\EmitterManager.h">
       <Filter>Feature\Particle\Manager</Filter>
     </ClInclude>
     <ClInclude Include="Features\Particle\Emitter\ParticleEmitter.h">
       <Filter>Feature\Particle\Emitter</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Lighting\Manager\LightingManager.h">
+      <Filter>Feature\Lighting\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Lighting\PointLight\PointLight.h">
+      <Filter>Feature\Lighting\PointLight</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Primitive\OBB.h">
+      <Filter>Feature\Shape\OBB</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
