--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -178,6 +178,15 @@
     <Filter Include="Feature\Collision\Collider">
       <UniqueIdentifier>{c8050890-2b06-4e5c-9f4a-c63151aecca4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Feature\Easing">
+      <UniqueIdentifier>{53aeec94-d787-4d99-b465-261ed690cdbd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Feature\Easing\Manager">
+      <UniqueIdentifier>{87c034dc-2a58-4398-a8da-17b67b15a2e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Feature\CSV">
+      <UniqueIdentifier>{041acee4-5bdd-4267-9204-84c9d7b43c7c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DebugTools\DebugManager\DebugManager.cpp">
@@ -308,6 +317,18 @@
     </ClCompile>
     <ClCompile Include="Features\Collision\Collider\Collider.cpp">
       <Filter>Feature\Collision\Collider</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Easing\Manager\EasingManager.cpp">
+      <Filter>Feature\Easing\Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Easing\Easing_impl.cpp">
+      <Filter>Feature\Easing</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\Easing\Easing.cpp">
+      <Filter>Feature\Easing</Filter>
+    </ClCompile>
+    <ClCompile Include="Features\CSV\CSVLoader.cpp">
+      <Filter>Feature\CSV</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -472,6 +493,18 @@
     </ClInclude>
     <ClInclude Include="Features\Collision\Shape.h">
       <Filter>Feature\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Easing\Manager\EasingManager.h">
+      <Filter>Feature\Easing\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\Easing\Easing.h">
+      <Filter>Feature\Easing</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\CSV\CSVLoader.h">
+      <Filter>Feature\CSV</Filter>
+    </ClInclude>
+    <ClInclude Include="Features\CSV\csvStructure\CSVData.h">
+      <Filter>Feature\CSV</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
