--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -14,7 +14,7 @@ Size=169,834
 Collapsed=0
 
 [Window][デバッグ]
-Pos=1163,0
+Pos=1163,1
 Size=432,853
 Collapsed=0
 
@@ -388,6 +388,30 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x670A95C5,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA675DD9B,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x91A4618E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x2BA4D4BB,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE170BADC,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x61B4A858,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x402C7B67,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
