描画レイヤーの追加

--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -6,7 +6,7 @@ Collapsed=0
 [Window][Log]
 Pos=171,781
 Size=714,121
-Collapsed=0
+Collapsed=1
 
 [Window][Objects]
 Pos=4,78
@@ -412,6 +412,10 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0x402C7B67,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x17C11E58,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
